<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <packaging>jar</packaging>

    <groupId>com.rbkmoney</groupId>
    <artifactId>adapter-common-lib</artifactId>
    <version>0.0.24</version>

    <name>adapter-common-lib</name>
    <description>Adapter common libs</description>
    <url>https://github.com/rbkmoney/adapter-common-lib.git</url>

    <developers>
        <developer>
            <organization>RBK.money</organization>
            <organizationUrl>https://rbk.money</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/rbkmoney/adapter-common-lib.git</connection>
        <developerConnection>scm:git:ssh://github.com/rbkmoney/adapter-common-lib.git</developerConnection>
        <url>https://github.com/rbkmoney/adapter-common-lib/tree/master</url>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>8</java.version>
        <dockerfile.base.service.tag>bc95d0d6dc13c693acd2b274531a7d604b877bf3</dockerfile.base.service.tag>
        <dockerfile.registry>${env.REGISTRY}</dockerfile.registry>
        <shared.resources.version>0.3.6</shared.resources.version>
        <jackson.version>2.11.2</jackson.version>
        <apache.commons.lang3.version>3.9</apache.commons.lang3.version>
        <apache.commons.codec.version>1.12</apache.commons.codec.version>
        <damsel.version>1.439-b18f037</damsel.version>
        <woody.version>[1.1.21,)</woody.version>
        <cds-proto.version>1.62-07f2b0f</cds-proto.version>
        <adapter-thrift-lib.version>1.0.5</adapter-thrift-lib.version>
        <adapter-client-lib.version>2.1.27</adapter-client-lib.version>
        <error-mapping-java.version>1.0.6</error-mapping-java.version>
        <slf4j.version>1.7.30</slf4j.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${apache.commons.lang3.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>${apache.commons.codec.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.4</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>1.2.3</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.2.3</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>net.logstash.logback</groupId>
            <artifactId>logstash-logback-encoder</artifactId>
            <version>5.3</version>
            <scope>compile</scope>
        </dependency>
        <!-- Spring -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
            <version>5.2.8.RELEASE</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
            <version>5.2.8.RELEASE</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot</artifactId>
            <version>2.3.2.RELEASE</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-actuator</artifactId>
            <version>2.3.2.RELEASE</version>
        </dependency>

        <!-- RBK.Money -->
        <dependency>
            <groupId>com.rbkmoney</groupId>
            <artifactId>damsel</artifactId>
            <version>${damsel.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.rbkmoney.adapter-thrift-lib</groupId>
            <artifactId>damsel-utils</artifactId>
            <version>${adapter-thrift-lib.version}</version>
        </dependency>
        <dependency>
            <groupId>com.rbkmoney</groupId>
            <artifactId>cds-proto</artifactId>
            <version>${cds-proto.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.rbkmoney.adapter-thrift-lib</groupId>
            <artifactId>cds-utils</artifactId>
            <version>${adapter-thrift-lib.version}</version>
        </dependency>
        <dependency>
            <groupId>com.rbkmoney.woody</groupId>
            <artifactId>woody-thrift</artifactId>
            <version>${woody.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.rbkmoney.adapter-client-lib</groupId>
            <artifactId>hellgate-adapter-client</artifactId>
            <version>${adapter-client-lib.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.rbkmoney</groupId>
            <artifactId>error-mapping-java</artifactId>
            <version>${error-mapping-java.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>com.fasterxml.jackson.core</groupId>
                    <artifactId>jackson-databind</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.fasterxml.jackson.core</groupId>
                    <artifactId>jackson-core</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- Test -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <version>2.3.2.RELEASE</version>
            <scope>test</scope>
        </dependency>

        <!-- Other -->
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>4.0.1</version>
        </dependency>
        <dependency>
            <groupId>javax.validation</groupId>
            <artifactId>validation-api</artifactId>
            <version>2.0.1.Final</version>
        </dependency>
    </dependencies>

    <distributionManagement>
        <downloadUrl>http://java-nexus.msk1.rbkmoney.net:8081/nexus/content/groups/public</downloadUrl>
        <repository>
            <uniqueVersion>false</uniqueVersion>
            <id>releases</id>
            <name>RBKmoney releases repository</name>
            <url>http://java-nexus.msk1.rbkmoney.net:8081/nexus/content/repositories/releases</url>
            <layout>default</layout>
        </repository>
        <snapshotRepository>
            <uniqueVersion>true</uniqueVersion>
            <id>snapshots</id>
            <name>RBKmoney snapshots repository</name>
            <url>http://java-nexus.msk1.rbkmoney.net:8081/nexus/content/repositories/snapshots</url>
            <layout>default</layout>
        </snapshotRepository>
    </distributionManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.2</version>
                <configuration>
                    <destFile>${sonar.jacoco.reportPath}</destFile>
                    <append>true</append>
                </configuration>
                <executions>
                    <execution>
                        <id>agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.0</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
